# simcampus

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  README.zh.md  TODOS.md  plan.md  pyproject.toml
canon/cast/: visual_bible.json
data/: catalyst_events.json  location_events.json  scene_ambient_events.json  schedule.json
data/characters/: chen_xue.json  cheng_yutong.json  fang_yuchen.json  he_jiajun.json  he_min.json  jiang_haotian.json  li_ming.json  lin_zhaoyu.json  liu_yang.json  lu_siyuan.json  shen_yifan.json  su_nianyao.json  sun_hao.json  tang_shihan.json  wang_hong.json  wang_laoshi.json  wu_lei.json  zhang_qiang.json  zhao_wei.json  zhou_ting.json
docs/: ARCHITECTURE.md
scripts/: backfill_key_memory_topics.py  generate_behavioral_anchors.py  init_world.py
scripts/sanity_check/: m1_ungrounded_events.py  m2_per_day_memory_cap.py  m3_concern_topic_dedup.py  m4_empty_relationships.py  m5_positive_emotion_ratio.py  m6_per_agent_memory_count.py  run_all.py
src/sim/: config.py
src/sim/agent/: context.py  daily_plan.py  qualitative.py  replan.py  self_narrative.py  state_update.py  storage.py
src/sim/api/: models.py  server.py
tests/: test_api_endpoints.py  test_apply_results.py  test_cards_logic.py  test_event_queue.py  test_exam.py  test_gated_ticks.py  test_grouping.py  test_llm_fallback.py  test_memory.py  test_models.py  test_narrative.py  test_pacing.py  test_qualitative.py  test_resolution.py  test_sanity_check_m1.py  test_sanity_check_m3.py  test_schedule.py  test_state_update.py  test_storage.py
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vercel.json
web/src/: App.tsx  index.css
(+302 files in other folders)
