[project]
name = "sim"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.40",
    "instructor>=1.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "jinja2>=3.1",
    "loguru>=0.7",
]

[project.scripts]
sim = "sim.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sim"]
